<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/Imagenlogologin"
        android:layout_width="208dp"
        android:layout_height="159dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textoapplogin"
        android:layout_width="177dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textodescriptivosplash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Imagenlogologin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textodescriptivosplash"
        android:layout_width="300dp"
        android:layout_height="127dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/texto_introductorio"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoapplogin" />

    <Button
        android:id="@+id/botoncomenzar"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boton_redondeado"
        android:padding="10dp"
        android:text="@string/comenzar"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textodescriptivosplash"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="101dp"
        android:layout_height="57dp"
        android:layout_marginStart="194dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="135dp"
        android:background="@android:color/transparent"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botoncomenzar"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>